--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -115,7 +115,7 @@ pipeline {
       environment {
         awsAccountId = '281505375529'
         region = 'us-east-1'
-        repositoryName = 'jjtech_demo'
+        repositoryName = 'jjtech-demo'
         dockerImageTag = "${BUILD_NUMBER}"
         ecrRegistry = "${awsAccountId}.dkr.ecr.${region}.amazonaws.com"
       }
