--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -16,7 +16,7 @@ pipeline {
     stage('Git Checkout') {
       steps {
         echo 'Cloning the application code...'
-        git branch: 'main', url: 'https://https://github.com/Ajoh-web/jjtech-ci-cd-pipeline-project-k8s.git
+        git branch: 'main', url: 'https://github.com/Ajoh-web/jjtech-ci-cd-pipeline-project-k8s.git
       }
     }
 
