--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -16,10 +16,10 @@ pipeline {
     stage('Git Checkout') {
       steps {
         echo 'Cloning the application code...'
-        git branch: 'main', url: 'https://github.com/Ajoh-web/jjtech-ci-cd-pipeline-project-k8s.git
+        git branch: 'main', url: 'https://github.com/Ajoh-web/jjtech-ci-cd-pipeline-project-k8s.git'
       }
     }
-
+    
     stage('create eks cluster') {
      steps {
        script{
